# game

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Game/: Game-Client  Game-Client-Network  Game-Server  launch.py
libs/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw/examples/: Makefile  cmake_install.cmake
libs/glfw/examples/boing.app/Contents/MacOS/: boing
libs/glfw/examples/gears.app/Contents/MacOS/: gears
libs/glfw/examples/heightmap.app/Contents/MacOS/: heightmap
libs/glfw/examples/particles.app/Contents/MacOS/: particles
libs/glfw/examples/simple.app/Contents/MacOS/: simple
libs/glfw/examples/splitview.app/Contents/MacOS/: splitview
libs/glfw/examples/wave.app/Contents/MacOS/: wave
libs/glfw/src/: Makefile  cmake_install.cmake
libs/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  events  gamma  glfwinfo  iconify  joysticks  monitors  msaa  reopen
libs/glfw/tests/empty.app/Contents/MacOS/: empty
libs/glfw/tests/icon.app/Contents/MacOS/: icon
libs/glfw/tests/sharing.app/Contents/MacOS/: sharing
libs/glfw/tests/tearing.app/Contents/MacOS/: tearing
libs/glfw/tests/threads.app/Contents/MacOS/: threads
libs/glfw/tests/timeout.app/Contents/MacOS/: timeout
libs/glfw/tests/title.app/Contents/MacOS/: title
libs/glfw/tests/windows.app/Contents/MacOS/: windows
libs/maze/incl/: cell.h  maze.h
libs/maze/src/: cell.cpp  maze.cpp
libs/network/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libs/network/incl/: connect.h
libs/network/src/: connect.cpp
main_loops/src/: server_loop.cpp
models/cube/: cube.mtl
src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
src/Game/: Game-Client  Game-Server
src/client/incl/: client.h
src/client/src/: client.cpp
src/graphics/incl/: mesh.h  model.h  shader_loader.h
src/graphics/shaders/: playershader.frag  playershader.vert
src/graphics/src/: mesh.cpp  model.cpp  shader_loader.cpp
src/libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/libs/glfw/examples/: Makefile
src/libs/glfw/examples/boing.app/Contents/MacOS/: boing
src/libs/glfw/examples/heightmap.app/Contents/MacOS/: heightmap
src/libs/glfw/examples/particles.app/Contents/MacOS/: particles
src/libs/glfw/examples/splitview.app/Contents/MacOS/: splitview
src/libs/glfw/examples/wave.app/Contents/MacOS/: wave
src/libs/glfw/src/: Makefile  cmake_install.cmake
src/libs/glfw/tests/: Makefile  gamma  iconify  joysticks  monitors  msaa  reopen
src/libs/glfw/tests/empty.app/Contents/MacOS/: empty
src/libs/glfw/tests/tearing.app/Contents/MacOS/: tearing
src/libs/glfw/tests/threads.app/Contents/MacOS/: threads
src/libs/glfw/tests/timeout.app/Contents/MacOS/: timeout
src/main_loops/incl/: main_globals.h
src/main_loops/src/: client_loop.cpp  client_network.cpp  server_loop.cpp
src/network/server/incl/: peer.h  server.h  server_player.h
src/network/server/src/: server.cpp  server_player.cpp
src/protos/: actionHandler.grpc.pb.cc  actionHandler.grpc.pb.h  actionHandler.pb.cc  actionHandler.pb.h  actionHandler.proto  input_handler.grpc.pb.cc  input_handler.grpc.pb.h  input_handler.pb.cc  input_handler.pb.h  input_handler.proto  object_handler.grpc.pb.cc  object_handler.grpc.pb.h  object_handler.pb.cc  object_handler.pb.h  object_handler.proto
src/server/incl/: server.h
src/server/src/: server.cpp
src/test/: test_maze.cpp
src/utils/input/: input_manager.cpp  input_manager.h
src/utils/logging/: logging.cpp  logging.h
